// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifExpertApp deve mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategorias={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="sasha grey"
      key="sasha grey"
    >
      sasha grey
    </GifGrid>
    <GifGrid
      category="stoya"
      key="stoya"
    >
      stoya
    </GifGrid>
  </ol>
</Fragment>
`;

exports[`Pruebas en GifExpertApp match con GifExpertApp 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategorias={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="one punch man"
      key="one punch man"
    >
      one punch man
    </GifGrid>
  </ol>
</Fragment>
`;
